--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   geocoding: ^4.0.0
   flutter_svg: ^2.2.0
+  firebase_messaging: ^16.0.1
 
 dev_dependencies:
   flutter_test:
